@@ -79,10 +79,13 @@
 #debug
 
 # F|log_facility facility:
-# Syslog facility to log to. If the faclilty has a leading '/' then it
-# will be treated as a file to log to. (default "mail")
-# Note: If an error occurs before options are read it may be logged
-# to syslog faclilty mail
+#Syslog facility to log to. If the facility has a leading '/' then it will
+#be treated as a file. If is "-" or "+" then log to stdout or stderr
+#respectivley.
+#(default "mail")
+#Notes: If an error occurs before options are read it may be logged to
+#stdout. If stdout or stderr are used, then the process will not fork
+#and detach from the terminal.
 #F mail
 #log_facility /dev/null
 
