@@ -924,9 +924,9 @@ void usage(int exit_status){
     "    Turn on verbose debuging.\n"
     " -F|--log_facility facility:\n"
     "    Syslog facility to log to. If the faclilty has a leading '/' then it\n"
-    "    will be treated as a file to log to. (default \"%s\")\n"
-    "    Note: If an error occurs before options are read it may be logged\n"
-    "    to syslog faclilty mail\n"
+    "    will be treated as a file to log to. If '-' or '+' then log to\n"
+    "    stdout or stderr respecvitvley.\n"
+    "    (default \"%s\")\n"
     " -f|--config_file filename:\n"
     "    Name of config file to read. If set to \"\" no config file will be\n"
     "    used. Command line options override options set in config file.\n"
